--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
 	"author": "Kinzaz",
 	"private": true,
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.6",
 		"react-scripts": "5.0.0",
-		"redux": "^4.1.2",
-		"redux-persist": "^6.0.0"
+		"redux-persist": "^6.0.0",
+		"reduxjs-toolkit-persist": "^7.2.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
